# Org1

.github/workflows/: ci.yml  frontend-ci.yml
backend/: .env.example  README.md  config.py  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 5d36ba577387_made_organization_point_to_users_and_.py
backend/app/: config.py  database.py  logger.py  main.py
backend/app/interfaces/: authenticator.py
backend/app/models/: organization.py  user.py
backend/app/routers/: organization.py  user.py
backend/app/utils/: authorization.py  jwt_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/interxai/src/: index.css
frontend/interxai/src/components/sections/: FeaturesSection.tsx  HeroSection.tsx
frontend/interxai/src/components/ui/: Button.tsx
frontend/src/: App.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/sections/: HeroSection.tsx
frontend/src/components/ui/: AlertBanner.tsx  FormInput.tsx  Logo.tsx
frontend/src/features/: LandingPage.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/auth/components/: LoginForm.tsx
frontend/src/features/auth/hooks/: useLogin.ts
frontend/src/services/: auth.service.ts
tools/: backend_lint
