[project]
name = "backend"
version = "0.1.0"
description = "InterXAI - AI-powered interview automation system (FastAPI backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.10",
]
